--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -1,24 +1,2 @@
-<ion-content color="dark">
-  <form #form="ngForm" (ngSubmit)="register(form)">
-    <ion-grid>
-      <ion-row class="ion-justify-content-center">
-        <ion-col class="ion-align-self-center" size-md="6" size-lg="5" size-xs="12">
-          <div class="ion-text-center">
-            <h3>Iniciar Sesion</h3>
-          </div>
-          <div class="ion-padding">
-            <ion-item>
-              <ion-input name="name" type="text" placeholder="Usuario" ngModel required></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-input name="confirm" type="password" placeholder="Constraseña" ngModel required></ion-input>
-            </ion-item>
-          </div>
-          <div class="ion-padding">
-            <ion-button size="medium" type="submit" expand="block"  [routerLink]="[ '/register' ]">Iniciar Sesion</ion-button>
-          </div>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </form>
-</ion-content>
+<app-navbar></app-navbar>
+<app-sidebar></app-sidebar>
