--- a/src/pages/register/register.page.html
+++ b/src/pages/register/register.page.html
@@ -21,8 +21,8 @@
             </ion-item>
           </div>
           <div class="ion-padding">
-            <ion-button size="medium" type="submit" expand="block"  [routerLink]="[ '/home' ]">Registrarse</ion-button>
-            <ion-button size="medium" type="submit" expand="block"  [routerLink]="[ '/register' ]">Iniciar Sesion</ion-button>
+            <ion-button size="medium" type="submit" expand="block"  >Registrarse</ion-button>
+            <ion-button size="medium" type="submit" expand="block"  [routerLink]="[ '' ]">Iniciar Sesion</ion-button>
           </div>
         </ion-col>
       </ion-row>
