--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <title>Agencia</title>
+  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core@4.7.4/css/ionic.bundle.css"/>
 
   <base href="/" />
 
@@ -12,6 +14,7 @@
   <meta name="msapplication-tap-highlight" content="no" />
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
